# EchoLens

./: .dockerignore  .env.example  .gitignore  .gitmodules  README-EN.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.insight.yml  docker-compose.override.local.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
archive/: README.md
backend/: Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  report.py  simulation.py  system.py
backend/app/models/: __init__.py  project.py  task.py
backend/app/services/: __init__.py  graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  logger.py  platform_mapping.py  retry.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: graph.js  index.js  report.js  simulation.js  system.js
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/router/: index.js
tools/: run_all.ps1
(+8 files in other folders)
